[gd_scene load_steps=17 format=2]

[ext_resource path="res://Image-assets/metal-frame.png" type="Texture" id=1]
[ext_resource path="res://Image-assets/button-one.png" type="Texture" id=2]
[ext_resource path="res://Image-assets/close_button.png" type="Texture" id=3]
[ext_resource path="res://Scripts/castle.gd" type="Script" id=4]
[ext_resource path="res://Image-assets/king_portrait_idle.png" type="Texture" id=5]
[ext_resource path="res://Image-assets/button-five.png" type="Texture" id=6]
[ext_resource path="res://Image-assets/button-one-disabled.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.207843, 0.133333, 0.0980392, 0.890196 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.207843, 0.133333, 0.0980392, 0.890196 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.207843, 0.133333, 0.0980392, 0.890196 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.207843, 0.133333, 0.0980392, 0.890196 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.207843, 0.133333, 0.0980392, 0.890196 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.207843, 0.133333, 0.0980392, 0.890196 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.207843, 0.133333, 0.0980392, 0.890196 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="castle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="castlePanel" type="Panel" parent="."]
margin_left = 26.0
margin_top = 225.0
margin_right = 408.0
margin_bottom = 536.0
rect_pivot_offset = Vector2( 418.022, 212.429 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bkgr" type="TextureRect" parent="castlePanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="vbox" type="VBoxContainer" parent="castlePanel/bkgr"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -155.0
margin_top = 65.0
margin_right = 156.0
margin_bottom = -289.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="portrait0" type="TextureRect" parent="castlePanel/bkgr/vbox"]
margin_right = 311.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="name" type="Label" parent="castlePanel/bkgr/vbox/portrait0"]
margin_left = 88.0
margin_right = 139.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 171.135, 67.8479 )
text = "Monoke"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="status " type="Label" parent="castlePanel/bkgr/vbox/portrait0"]
margin_left = 88.9025
margin_top = 32.0
margin_right = 139.902
margin_bottom = 46.0
rect_pivot_offset = Vector2( 52.3348, 10.0293 )
text = "Status:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="actualStatus" type="Label" parent="castlePanel/bkgr/vbox/portrait0"]
margin_left = 138.0
margin_top = 32.0
margin_right = 189.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 152.301, -31.6971 )
text = "None"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="actionFirst" type="TextureButton" parent="castlePanel/bkgr/vbox/portrait0"]
margin_left = 214.523
margin_top = 12.4283
margin_right = 300.523
margin_bottom = 52.4283
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnLabel" type="Label" parent="castlePanel/bkgr/vbox/portrait0/actionFirst"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.5
margin_top = -7.0
margin_right = 23.5
margin_bottom = 7.0
text = "Marry"
align = 1
valign = 1

[node name="portrait1" type="TextureRect" parent="castlePanel/bkgr/vbox"]
margin_top = 94.0
margin_right = 311.0
margin_bottom = 158.0
texture = ExtResource( 1 )

[node name="name" type="Label" parent="castlePanel/bkgr/vbox/portrait1"]
margin_left = 88.0
margin_right = 139.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 171.135, 67.8479 )
text = "Ary"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="status " type="Label" parent="castlePanel/bkgr/vbox/portrait1"]
margin_left = 88.0
margin_top = 32.0
margin_right = 139.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 52.3348, 10.0293 )
text = "Status:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="actualStatus" type="Label" parent="castlePanel/bkgr/vbox/portrait1"]
margin_left = 138.0
margin_top = 32.0
margin_right = 189.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 152.301, -31.6971 )
text = "None"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="actionSecond" type="TextureButton" parent="castlePanel/bkgr/vbox/portrait1"]
margin_left = 214.523
margin_top = 12.4283
margin_right = 300.523
margin_bottom = 52.4283
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnLabel" type="Label" parent="castlePanel/bkgr/vbox/portrait1/actionSecond"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.5
margin_top = -7.0
margin_right = 23.5
margin_bottom = 7.0
text = "Marry"
align = 1
valign = 1

[node name="info" type="Button" parent="castlePanel/bkgr"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 36.0
margin_top = 65.0
margin_right = -282.0
margin_bottom = -184.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info2" type="Button" parent="castlePanel/bkgr"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 36.0
margin_top = 158.0
margin_right = -282.0
margin_bottom = -91.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infoDisket" type="Button" parent="castlePanel/bkgr"]
visible = false
margin_left = 36.0
margin_top = 65.0
margin_right = 342.0
margin_bottom = 235.0
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 15 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="desc" type="Label" parent="castlePanel/bkgr/infoDisket"]
margin_left = 19.0
margin_top = 27.0
margin_right = 285.0
margin_bottom = 61.0

[node name="traits" type="Label" parent="castlePanel/bkgr/infoDisket"]
margin_left = 19.0
margin_top = 74.0
margin_right = 285.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infoDisket2" type="Button" parent="castlePanel/bkgr"]
visible = false
margin_left = 36.0
margin_top = 65.0
margin_right = 342.0
margin_bottom = 235.0
focus_mode = 0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="desc" type="Label" parent="castlePanel/bkgr/infoDisket2"]
margin_left = 19.0
margin_top = 27.0
margin_right = 285.0
margin_bottom = 61.0

[node name="traits" type="Label" parent="castlePanel/bkgr/infoDisket2"]
margin_left = 19.0
margin_top = 74.0
margin_right = 285.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close" type="TextureButton" parent="."]
margin_left = 365.651
margin_top = 226.859
margin_right = 412.651
margin_bottom = 268.859
rect_pivot_offset = Vector2( 78.3712, 210.57 )
texture_normal = ExtResource( 3 )

[node name="kingDialog1" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kingDialogBkgr" type="Panel" parent="kingDialog1"]
modulate = Color( 1, 1, 1, 0.729412 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="king_portrait_idle" type="Sprite" parent="kingDialog1"]
position = Vector2( 46.3137, 625.025 )
scale = Vector2( 0.557045, 0.557045 )
texture = ExtResource( 5 )

[node name="dialogBox" type="Panel" parent="kingDialog1"]
modulate = Color( 0.266667, 0.192157, 0.192157, 1 )
margin_left = 143.0
margin_top = 381.0
margin_right = 414.0
margin_bottom = 499.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text1" type="Label" parent="kingDialog1"]
margin_left = 159.765
margin_top = 400.16
margin_right = 232.765
margin_bottom = 414.16
text = "I know you merchant. No need for 
introductions ! Your name is all over
the streets lately, my spies told me 
of you."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next1" type="TextureButton" parent="kingDialog1/text1"]
margin_left = 178.0
margin_top = 67.0
margin_right = 241.0
margin_bottom = 88.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnLabel" type="Label" parent="kingDialog1/text1/next1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -15.0
margin_top = -7.0
margin_right = 15.0
margin_bottom = 7.0
text = "Next"

[node name="text2" type="Label" parent="kingDialog1"]
visible = false
margin_left = 159.765
margin_top = 400.16
margin_right = 232.765
margin_bottom = 414.16
text = "Ahh, of course, merchant. You think
you are here in a position of power as
your bussiness grow, but remember
I can take it all from you !"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next2" type="TextureButton" parent="kingDialog1/text2"]
margin_left = 178.0
margin_top = 67.0
margin_right = 241.0
margin_bottom = 88.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnLabel" type="Label" parent="kingDialog1/text2/next2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -7.0
margin_right = 17.5
margin_bottom = 7.0
text = "Close"
[connection signal="pressed" from="castlePanel/bkgr/vbox/portrait0/actionFirst" to="." method="_on_actionFirst_pressed"]
[connection signal="pressed" from="castlePanel/bkgr/vbox/portrait1/actionSecond" to="." method="_on_actionSecond_pressed"]
[connection signal="pressed" from="castlePanel/bkgr/info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="castlePanel/bkgr/info2" to="." method="_on_info2_pressed"]
[connection signal="pressed" from="castlePanel/bkgr/infoDisket" to="." method="_on_infoDisket_pressed"]
[connection signal="pressed" from="castlePanel/bkgr/infoDisket2" to="." method="_on_infoDisket2_pressed"]
[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="kingDialog1/text1/next1" to="." method="_on_next1_pressed"]
[connection signal="pressed" from="kingDialog1/text2/next2" to="." method="_on_next2_pressed"]
